@@ -317,6 +317,7 @@
   <ItemGroup>
     <Compile Include="AutoregisterPerWebRequestLifestyleModule.cs" />
     <Compile Include="Core\CustomLifestyleAttribute.cs" />
+    <Compile Include="Core\Internal\CollectionExtensions.cs" />
     <Compile Include="Core\Internal\Constants.cs" />
     <Compile Include="Core\Internal\SimpleSortedSet.cs" />
     <Compile Include="Core\CastleComponentAttribute.cs" />
